--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ cache:
 
 frontend_test:
   stage: test
-  image: node:20-alpine
+  image: node:23.9
   before_script:
     - npm install -g pnpm
     - cd frontend
@@ -33,7 +33,7 @@ frontend_test:
 
 backend_test:
   stage: test
-  image: golang:1.22-alpine
+  image: golang:1.23.6
   before_script:
     - cd backend
     - go mod download
