--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,9 +55,9 @@ frontend_docker:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
     - cd frontend
-    - docker build -t $FRONTEND_IMAGE:$CI_COMMIT_SHA -f frontend.Dockerfile .
+    - docker build --build-arg PUBLIC_BACKEND_URL=${PUBLIC_BACKEND_URL} -t $FRONTEND_IMAGE:$CI_COMMIT_SHA -f frontend.Dockerfile .
     - docker tag $FRONTEND_IMAGE:$CI_COMMIT_SHA $FRONTEND_IMAGE:latest
-    - docker run --rm $FRONTEND_IMAGE:$CI_COMMIT_SHA sh -c "echo 'Frontend container test successful'"
+    - docker run --rm --entrypoint=/bin/sh -e PUBLIC_BACKEND_URL=${PUBLIC_BACKEND_URL} $FRONTEND_IMAGE:$CI_COMMIT_SHA -c "echo 'Frontend container test successful'"
 
     # Push only on main branch
     - |
@@ -84,9 +84,9 @@ backend_docker:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
     - cd backend
-    - docker build --build-arg PUBLIC_BACKEND_URL=${PUBLIC_BACKEND_URL} -t $FRONTEND_IMAGE:$CI_COMMIT_SHA .
+    - docker build --build-arg DATABASE_URL=${DATABASE_URL} -t $BACKEND_IMAGE:$CI_COMMIT_SHA -f backend.Dockerfile .
     - docker tag $BACKEND_IMAGE:$CI_COMMIT_SHA $BACKEND_IMAGE:latest
-    - docker run --rm -e PUBLIC_BACKEND_URL=${PUBLIC_BACKEND_URL} $FRONTEND_IMAGE:$CI_COMMIT_SHA sh -c "echo 'Frontend container test successful'"
+    - echo "Backend container built successfully as $BACKEND_IMAGE:$CI_COMMIT_SHA"
 
     # Push only on main branch
     - |
